# xrpl-wasm-stdlib

./: package-lock.json  package.json
examples/: Cargo.toml
examples/smart-vaults/hello_world_vault/: Cargo.toml  README.md  runTest.js
examples/smart-vaults/hello_world_vault/src/: lib.rs
examples/smart-vaults/storage_vault/: Cargo.toml  README.md  runTest.js
examples/smart-vaults/storage_vault/src/: lib.rs  state.rs
examples/smart-vaults/whitelist_vault/: Cargo.toml  README.md  runTest.js
examples/smart-vaults/whitelist_vault/src/: lib.rs
tests/: deployWasmCode.js  runSingleTest.js
xrpl-wasm-stdlib/src/: sfield.rs
xrpl-wasm-stdlib/src/core/current_tx/: mod.rs  traits.rs  vault_deposit.rs  vault_withdraw.rs
xrpl-wasm-stdlib/src/core/ledger_objects/: current_vault.rs  mod.rs  traits.rs
