[workspace]
resolver = "2"
members = [
    "smart-escrows/atomic_swap/atomic_swap1",
    "smart-escrows/atomic_swap/atomic_swap2",
    "smart-escrows/hello_world",
    "smart-escrows/kyc",
    "smart-escrows/ledger_sqn",
    "smart-escrows/nft_owner",
    "smart-escrows/notary",
    "smart-escrows/oracle",

    "smart-vaults/hello_world_vault",
]

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)
